--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,51 @@
+* {
+  transition: all;
+  transition-duration: 0.3s;
+}
+
 .App {
   text-align: center;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+button {
+  border: 3px solid #303030;
+  margin: 0.2rem;
+  font-size: 1.5rem;
+  border-radius: 8px;
+  padding: 3px 9px;
+  text-transform: capitalize;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.red {
+  background-color: red;
+  color: white;
+}
+
+.green {
+  background-color: green;
+  color: white;
+}
+
+.blue {
+  background-color: blue;
+  color: white;
+}
+
+.purple {
+  background-color: purple;
+  color: white;
 }
 
 @media (prefers-reduced-motion: no-preference) {
